# music-memo-machine

./: .gitignore  AGENTS.md  README.md  SPEC.md  eslint.config.mjs  index.html  package-lock.json  package.json  prettier.config.mjs  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
docs/: ROADMAP.md  deployment.md  emulator.md  ingestion.md
recorder/: README.md  pyproject.toml
recorder/music_memo_recorder/: __init__.py  audio.py  cli.py  config.py  gpio.py  ids.py  service.py  spool.py  sync.py  wav.py
recorder/tests/: test_config.py  test_service.py  test_spool.py  test_sync.py
scripts/: bootstrap-pi.sh  install-recorder-service.sh  recorder-emulator.mjs  seed-fixtures.mjs
server/: index.js  metadata-store.js  waveform.js
src/: App.tsx  RecorderEmulator.tsx  api.ts  styles.css  types.ts
systemd/: music-memo-recorder.service
tests/: api.test.mjs  recorder-emulator.test.mjs
